--- a/app/src/main/res/layout/list_item_msg_left.xml
+++ b/app/src/main/res/layout/list_item_msg_left.xml
@@ -29,12 +29,13 @@
             android:layout_marginRight="4dp"/>
 
         <TextView
+            android:text="6666"
             android:id="@+id/tv_msg_left"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textSize="13dp"
             android:layout_marginRight="50dp"
             android:layout_toRightOf="@id/img_ble"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/black"/>
     </RelativeLayout>
 </LinearLayout>
