--- a/app/src/main/res/layout/list_item_msg_right.xml
+++ b/app/src/main/res/layout/list_item_msg_right.xml
@@ -29,6 +29,7 @@
             android:layout_marginLeft="4dp"/>
 
         <TextView
+            android:text="555"
             android:id="@+id/tv_msg_right"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
